Fixed whitespace at bottom

--- a/app/coach/game-area/styles.less
+++ b/app/coach/game-area/styles.less
@@ -43,7 +43,6 @@
       height: 100%;
       min-height: 100%;
       background-color: @content-bg;
-      padding-bottom: 61px;
     }
   }
 
@@ -186,6 +185,8 @@
 
 .info-container {
   position: relative;
+  background-color: @content-bg;
+  padding-bottom: 61px;
 
   .game-remove {
     position: relative;
